--- a/views/pages/festivals.ejs
+++ b/views/pages/festivals.ejs
@@ -17,7 +17,7 @@
         <!-- top-nav-bar.ejs -->
         <%- include('../partials/top-nav-bar'); %>
             <div id="festivals-header">
-                <div id="transparent-background-festivals">
+                <div id="transparent-background">
                     <div id="festivals-header-group">
                         <p class="font-white" id="second-title">CULTURES AND FESTIVALS </p>
                         <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
