--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -14,13 +14,8 @@
             <div id="transparent-background">
                 <div id="accommodation-header-group">
                     <p class="font-white" id="second-title">ACCOMMODATION</p>
-                    <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
-                        parchment wingardium.
-                        Wand betrayal parseltongue soul detention elf lion back his.
-                        Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
-                        Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
-                        Bat forbidden cabbage parchment sunshine.
-                        Bag moon ground moon quidditch sight grim.
+                    <p class="font-white" id="content"><span class="font-peach">Discover the perfect haven </span>
+                        for your stay in Iloilo City as we present a curated selection of accommodations that cater to every traveler's needs. Whether you're seeking luxury, comfort, or budget-friendly options, our travel app is here to guide you in finding the ideal place to call home during your visit to Iloilo.
                     </p>
                 </div>
             </div>
@@ -28,7 +23,7 @@
         <div id="accommodation-body">
             <div id="accommodation-body-group">
                 <div id="body-header">
-                    <p class="font-black" id="third-title">ACCOMMODATION</p>
+                    <p class="font-black" id="third-title">Our comfort <span class="font-peach">picks </span></p>
                     <!--<div class="filter-row">
                         <p class="font-black">Sort By:</p>
                         <button>Name</button>
