--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -16,13 +16,12 @@
                 <div id="transparent-background">
                     <div id="p-a-l-header-group">
                         <p class="font-white" id="second-title">PLACES AND LANDMARKS</p>
-                        <p class="font-white" id="content"><span class="font-peach">Potter ipsum</span> wand elf
-                            parchment wingardium.
-                            Wand betrayal parseltongue soul detention elf lion back his.
-                            Dead bertie hat kedavra aragog gnomes wand palominos erumpent robes.
-                            Hair stroke time-turner newt fantastic bred erised pigwidgeon mine rva.
-                            Bat forbidden cabbage parchment sunshine.
-                            Bag moon ground moon quidditch sight grim.
+                        <p class="font-white" id="content"><span class="font-peach">Get ready to immerse yourself</span>
+                             in the enchanting wonders of Iloilo City, as we unveil the most iconic places and landmarks this captivating destination has to offer. This is your gateway to exploring the rich heritage, vibrant culture, and natural beauty of this remarkable city.
+
+                             Whether you're a local looking to rediscover your roots or a visitor seeking authentic experiences, let this be your guide to unlocking the secrets of Iloilo City.
+
+                            Start your journey now and let the magic of Iloilo captivate your senses. 
                         </p>
                     </div>
                 </div>
