--- a/views/partials/side-nav-bar.ejs
+++ b/views/partials/side-nav-bar.ejs
@@ -40,7 +40,7 @@
             <div>
                 <img src="/img/accommodation.png">
                 <!--Accomm. is short for Accommodation-->
-                <p id="title">ACCOMM.</p>
+                <p id="title">HOTELS</p>
             </div>
         </a>
     </li>
