--- a/views/pages/places-and-landmarks.ejs
+++ b/views/pages/places-and-landmarks.ejs
@@ -47,7 +47,7 @@
                                         style="object-fit:cover;border-radius:10px;padding-top:1px;">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="font-black" style="font-size: 50px;" id="content"><%= places[index]['Place']%></h5>
+                                        <h5 class="font-black" style="font-size: 50px;" id="content"><%= places[index]['Title']%></h5>
                                         <p class="font-black" style="font-size: 20px;" id="content"><%= places[index]['Description']%></p>
                                         <% var link = places[index]['Link']%>
                                         <% if(!link){%>
