--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,19 +2,26 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>LAGAW</title>
+<!--FAVICON-->
+<link rel="shortcut icon" href="/img/favicon_io/favicon.ico" type="image/x-icon">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" />
+
+<!--Local-made scripts-->
 <script defer src="/js/light-dark-mode.js"></script>
 <script defer src="/js/side-nav-bar.js"></script>
 <script defer src="/js/active-page.js"></script>
 <script defer src="/js/traffic-map.js"></script>
+
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!--Raleway Import-->
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap" rel="stylesheet">
 <!--Open Sans Import-->
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
