Corrected search and side bar titles

--- a/views/pages/search.ejs
+++ b/views/pages/search.ejs
@@ -29,7 +29,7 @@
                                     <img src=<%= foods[index]['Images Attached']%> />
                                 </div>
                                 <div class="card-body">
-                                  <h2 class="font-black" id="content"><%= foods[index]['Title']%></h5>  
+                                  <h2 class="font-black" id="title"><%= foods[index]['Title']%></h5>  
                                   <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
                                   <% var link = foods[index]['Link']%>
                                   <% var card_state = 'buttoncard'%>
@@ -49,7 +49,7 @@
                                     <img src=<%= accommodations[index]['Images Attached']%> />
                                 </div>
                                 <div class="card-body">
-                                  <h2 class="font-black" id="content"><%= accommodations[index]['Title']%></h5>  
+                                  <h2 class="font-black" id="title"><%= accommodations[index]['Title']%></h5>  
                                   <p class="font-black" id="content"><%= accommodations[index]['Description'] %></p>
                                   <% var link = accommodations[index]['Link']%>
                                   <% var card_state = 'buttoncard'%>
@@ -69,7 +69,7 @@
                                     <img src=<%= places[index]['Images Attached']%> />
                                 </div>
                                 <div class="card-body">
-                                  <h2 class="font-black" id="content"><%= places[index]['Title']%></h5>  
+                                  <h2 class="font-black" id="title"><%= places[index]['Title']%></h5>  
                                   <p class="font-black" id="content"><%= places[index]['Description'] %></p>
                                   <% var link = places[index]['Link']%>
                                   <% var card_state = 'buttoncard'%>
@@ -89,7 +89,7 @@
                                     <img src=<%= festivals[index]['Images Attached']%> />
                                 </div>
                                 <div class="card-body">
-                                  <h2 class="font-black" id="content"><%= festivals[index]['Title']%></h5>  
+                                  <h2 class="font-black" id="title"><%= festivals[index]['Title']%></h5>  
                                   <p class="font-black" id="content"><%= festivals[index]['Description'] %></p>
                                   <% var link = festivals[index]['Link']%>
                                   <% var card_state = 'buttoncard'%>
