Implemented user history.

--- a/views/pages/festivals.ejs
+++ b/views/pages/festivals.ejs
@@ -44,22 +44,34 @@ Discover the cultural treasures that bring Iloilo City to life. Unearth the capt
                         <% var festivals = festivals %>
                         <% for (index in festivals){%>
                             <div id="card-group">
-                                <div class="card-image">
-                                    <img src=<%= festivals[index]['Images Attached']%> />
-                                </div>
-                                <div class="card-body">
-                                  <h2 class="font-black" id="content"><%= festivals[index]['Title']%></h5>  
-                                  <p class="font-black" id="content"><%= festivals[index]['Description'] %></p>
-                                  <% var link = festivals[index]['Link']%>
-                                  <% var card_state = 'buttoncard'%>
-                                  <% if(!link){%>
-                                    <% link = '#'%>
-                                    <% card_state = 'disabled_buttoncard'%>
-                                  <% } %>
-                                  <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Festivals</a>
-                                
-                                </div>
+                                <% var varId = festivals[index]['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= festivals[index]['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                    <h2 class="font-black" id="content"><%= festivals[index]['Title']%></h2>  
+                                    <p class="font-black" id="content"><%= festivals[index]['Description'] %></p>
+                                    <% var link = festivals[index]['Link']%>
+                                    <% var card_state = 'buttoncard'%>
+                                    <% if(!link){%>
+                                        <% link = '#'%>
+                                        <!-- NOTE: Change to disabled_buttoncard once links are complete -->
+                                        <% var card_state = 'buttoncard'%>
+                                    <% } %>
+                                    <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                    <input type = "hidden" name = "Category" id = "Category" value ='Festivals'>
+                                    <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Festival</a>
+                                    </div>
+                                </form>
                             </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
                         <% } %>
                     </div>
                 </div>
