--- a/views/pages/accommodation.ejs
+++ b/views/pages/accommodation.ejs
@@ -34,29 +34,39 @@
                     <div id="wraphorizontal">
                         <% var accommodations = accommodations %>
                         <% for (index in accommodations){%>
-                            
-
                             <div id="horizontal-card-group" class="horizontalcard">
-                                <div class="horizontalcardimg" style="width: auto;">
-                                    <img src=<%= accommodations[index]['Images Attached']%>>
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="font-black" style="font-size: 50px;" id="title"><%= accommodations[index]['Title']%></h5>
-                                    <p class="font-black" style="font-size: 20px;" id="content"><%= accommodations[index]['Description']%></p>
-                                    <% var link = accommodations[index]['Link']%>
-                                    <!--Pls edit the card_state_location below to fetch map coordinates-->
-                                    <% var card_state_location = 'buttoncard_location'%>
-                                    <% if(!link){%>
-                                        <% link = '#'%>
-                                        <% var card_state = 'disabled_buttoncard'%>
-                                    <% } else { %>
-                                        <% var card_state = 'buttoncard'%>
-                                    <% } %>
-                                    <a href=<%= link%> target="_blank" class=<%= card_state_location%>>Check Location</a>
-                                    <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Accomodation</a>
-                                
-                                </div>
+                                <% var varId = accommodations[index]['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="horizontalcardimg" style="width: auto;">
+                                        <img src=<%= accommodations[index]['Images Attached']%>>
+                                    </div>
+                                    <div class="card-body">
+                                        <h5 class="font-black" style="font-size: 50px;" id="title"><%= accommodations[index]['Title']%></h5>
+                                        <p class="font-black" style="font-size: 20px;" id="content"><%= accommodations[index]['Description']%></p>
+                                        <% var link = accommodations[index]['Link']%>
+                                        <!--Pls edit the card_state_location below to fetch map coordinates-->
+                                        <% var card_state_location = 'buttoncard_location'%>
+                                        <% if(!link){%>
+                                            <% link = '#'%>
+                                            <% var card_state = 'disabled_buttoncard'%>
+                                        <% } else { %>
+                                            <% var card_state = 'buttoncard'%>
+                                        <% } %>
+                                        <a href=<%= link%> target="_blank" class=<%= card_state_location%>>Check Location</a>
+                                        <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                        <input type = "hidden" name = "Category" id = "Category" value ='Accommodations'>
+                                        <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Accommodation</a>
+                                    
+                                    </div>
+                                </form>
                             </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
                         <% } %>
                     </div>
 
