--- a/views/pages/food.ejs
+++ b/views/pages/food.ejs
@@ -42,22 +42,33 @@
                         <% var foods = foods %>
                         <% for (index in foods){%>
                             <div id="card-group">
-                                <div class="card-image">
-                                    <img src=<%= foods[index]['Images Attached']%> />
-                                </div>
-                                <div class="card-body">
-                                  <h2 class="font-black" id="content"><%= foods[index]['Title']%></h2>  
-                                  <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
-                                  <% var link = foods[index]['Link']%>
-                                  <% var card_state = 'buttoncard'%>
-                                  <% if(!link){%>
-                                    <% link = '#'%>
-                                    <% card_state = 'disabled_buttoncard'%>
-                                  <% } %>
-                                  <a href=<%= link%> target="_blank" class=<%= card_state%>>Check Food</a>
-                                
-                                </div>
+                                <% var varId = foods[index]['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= foods[index]['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                    <h2 class="font-black" id="content"><%= foods[index]['Title']%></h2>  
+                                    <p class="font-black" id="content"><%= foods[index]['Description'] %></p>
+                                    <% var link = foods[index]['Link']%>
+                                    <% var card_state = 'buttoncard'%>
+                                    <% if(!link){%>
+                                        <% link = '#'%>
+                                        <% card_state = 'disabled_buttoncard'%>
+                                    <% } %>
+                                    <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                    <input type = "hidden" name = "Category" id = "Category" value ='Foods'>
+                                    <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Food</a>
+                                    </div>
+                                </form>
                             </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
                         <% } %>
                     </div>
                 </div>
