--- a/views/pages/user.ejs
+++ b/views/pages/user.ejs
@@ -26,45 +26,145 @@
                 <div id="user_places">
                     <p class="font-white" id="title">Here are the places you've visited</p>
                     <div id="wrap">
-                        <%- include('../partials/dummyfood'); %>
-                            <%- include('../partials/dummyfood'); %>
-                                <%- include('../partials/dummyfood'); %>
-                                    <%- include('../partials/dummyfood'); %>
-                                        <%- include('../partials/dummyfood'); %>
-                                            <%- include('../partials/dummyfood'); %>
+                        <% var place_history = place_history %>
+                        <% for (index in place_history){%>
+                            <div id="card-group">
+                                <% var varId = place_history[index]['same']['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= place_history[index]['same']['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                    <h2 class="font-black" id="content"><%= place_history[index]['same']['Title']%></h2>  
+                                    <p class="font-black" id="content"><%= place_history[index]['same']['Description'] %></p>
+                                    <% var link = place_history[index]['same']['Link']%>
+                                    <% var card_state = 'buttoncard'%>
+                                    <% if(!link){%>
+                                        <% link = '#'%>
+                                        <% card_state = 'disabled_buttoncard'%>
+                                    <% } %>
+                                    <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                    <input type = "hidden" name = "Category" id = "Category" value ='Places'>
+                                    <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Place</a>
+                                    </div>
+                                </form>
+                            </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
+                        <% } %>
                     </div>
                 </div>
                 <div id="user_food">
                     <p class="font-white" id="title">Here are the foods you've viewed</p>
                     <div id="wrap">
-                        <%- include('../partials/dummyfood'); %>
-                            <%- include('../partials/dummyfood'); %>
-                                <%- include('../partials/dummyfood'); %>
-                                    <%- include('../partials/dummyfood'); %>
-                                        <%- include('../partials/dummyfood'); %>
-                                            <%- include('../partials/dummyfood'); %>
+                        <% var food_history = food_history %>
+                        <% for (index in food_history){%>
+                            <div id="card-group">
+                                <% var varId = food_history[index]['same']['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= food_history[index]['same']['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                    <h2 class="font-black" id="content"><%= food_history[index]['same']['Title']%></h2>  
+                                    <p class="font-black" id="content"><%= food_history[index]['same']['Description'] %></p>
+                                    <% var link = food_history[index]['same']['Link']%>
+                                    <% var card_state = 'buttoncard'%>
+                                    <% if(!link){%>
+                                        <% link = '#'%>
+                                        <% card_state = 'disabled_buttoncard'%>
+                                    <% } %>
+                                    <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                    <input type = "hidden" name = "Category" id = "Category" value ='Foods'>
+                                    <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Food</a>
+                                    </div>
+                                </form>
+                            </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
+                        <% } %>
                     </div>
                 </div>
                 <div id="user_culture">
                     <p class="font-white" id="title">Here are the festivals you've shown</p>
                     <div id="wrap">
-                        <%- include('../partials/dummyfood'); %>
-                            <%- include('../partials/dummyfood'); %>
-                                <%- include('../partials/dummyfood'); %>
-                                    <%- include('../partials/dummyfood'); %>
-                                        <%- include('../partials/dummyfood'); %>
-                                            <%- include('../partials/dummyfood'); %>
+                        <% var festival_history = festival_history %>
+                        <% for (index in festival_history){%>
+                            <div id="card-group">
+                                <% var varId = festival_history[index]['same']['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= festival_history[index]['same']['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                    <h2 class="font-black" id="content"><%= festival_history[index]['same']['Title']%></h2>  
+                                    <p class="font-black" id="content"><%= festival_history[index]['same']['Description'] %></p>
+                                    <% var link = festival_history[index]['same']['Link']%>
+                                    <% var card_state = 'buttoncard'%>
+                                    <% if(!link){%>
+                                        <% link = '#'%>
+                                        <% card_state = 'disabled_buttoncard'%>
+                                    <% } %>
+                                    <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                    <input type = "hidden" name = "Category" id = "Category" value ='Festivals'>
+                                    <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Festival</a>
+                                    </div>
+                                </form>
+                            </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
+                        <% } %>
                     </div>
                 </div>
                 <div id="user_accommodation">
                     <p class="font-white" id="title">Here are the accommodations you've looked</p>
                     <div id="wrap">
-                        <%- include('../partials/dummyfood'); %>
-                            <%- include('../partials/dummyfood'); %>
-                                <%- include('../partials/dummyfood'); %>
-                                    <%- include('../partials/dummyfood'); %>
-                                        <%- include('../partials/dummyfood'); %>
-                                            <%- include('../partials/dummyfood'); %>
+                        <% var hotel_history = hotel_history %>
+                        <% for (index in hotel_history){%>
+                            <div id="card-group">
+                                <% var varId = hotel_history[index]['same']['_id'].toString()%>
+                                <form id=<%= varId%> name="save_recent" action = "/save_recent" method = "POST" target = "dummyFrame">
+                                    <div class="card-image">
+                                        <img src=<%= hotel_history[index]['same']['Images Attached']%> />
+                                    </div>
+                                    <div class="card-body">
+                                    <h2 class="font-black" id="content"><%= hotel_history[index]['same']['Title']%></h2>  
+                                    <p class="font-black" id="content"><%= hotel_history[index]['same']['Description'] %></p>
+                                    <% var link = hotel_history[index]['same']['Link']%>
+                                    <% var card_state = 'buttoncard'%>
+                                    <% if(!link){%>
+                                        <% link = '#'%>
+                                        <% card_state = 'disabled_buttoncard'%>
+                                    <% } %>
+                                    <input type = "hidden" name = "varId" id = "varId" value=<%= varId%>>
+                                    <input type = "hidden" name = "Category" id = "Category" value ='Accommodations'>
+                                    <a href=<%= link%> onclick="return saveRecent('<%- varId%>')" target="_blank" class=<%= card_state%>>Check Accommodation</a>
+                                    </div>
+                                </form>
+                            </div>
+                            <script type="text/javascript">
+                                function saveRecent(id){
+                                    document.getElementById(id).submit();
+                                    return true;
+                                }
+                            </script>
+                            <iframe name = "dummyFrame" style="display: none;"></iframe>
+                        <% } %>
                     </div>
                 </div>
             </div>
